コメントを挿入しました。

--- a/src/__tests__/cypress/support/component-index.html
+++ b/src/__tests__/cypress/support/component-index.html
@@ -6,6 +6,8 @@
     <title>Cypress Component Testing</title>
   </head>
   <body>
+    <!-- Cypressがコンポーネントをマウントするルートdiv -->
     <div data-cy-root></div>
   </body>
 </html>
+
